<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_PfeifferPTM" Id="{5258f2ac-d965-4bdd-8c4b-be7691cce5d3}">
    <Declaration><![CDATA[TYPE ST_PfeifferPTM EXTENDS ST_PTM :
STRUCT
(* Extension of the PTM archetype for Pfeiffer turbos 
Applicable to: 
HiPace series w/ onboard controllers
More?
*)
//Readbacks
	i_diPwr		:	DINT;
	i_diElecTemp	:	DINT;
	i_diBtmTemp:	DINT;
	i_diBrngTemp:	DINT;
	i_diMtrTemp:	DINT;
	i_iErrorCode	:	INT; //might change these to enumeration someday
	i_iWarningCode	:	INT;
	i_xTempFault	:	BOOL;
	i_uiPowerPctRbk :   UINT;
	
//Controls
	q_uiPowerPct : UINT := 100; //Should normally be 100
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>